--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,3 @@
-title:       A Triangle Jekyll
-author:      Leonard Kiyoshi Bogdonoff
-linkedin:    http://www.linkedin.com/pub/leonard-bogdonoff/25/14b/8a6
-twitter:     rememberlenny
-github:      rememberlenny
+title:       CQ
 source:      ./_source
 destination: ./_site
